crates/tych/src/tests/snapshots/array_index_1.snap
---
source: crates/tych/src/tests.rs
assertion_line: 651
expression: "(test[1], res)"
---
- "\nlet x: [int; 3] = [1, 2, 3]\nx[0]\n"
- Ok:
    nodes:
      - kind:
          Let:
            name: x
            antn:
              SArray:
                - Int32
                - 3
            init:
              kind:
                Lit:
                  value:
                    Array:
                      elements:
                        - kind:
                            Lit:
                              value:
                                Int32: 1
                              ty: Int32
                        - kind:
                            Lit:
                              value:
                                Int32: 2
                              ty: Int32
                        - kind:
                            Lit:
                              value:
                                Int32: 3
                              ty: Int32
                      inner_ty: Int32
                  ty:
                    SArray:
                      - Int32
                      - 3
      - kind:
          Index:
            binding:
              kind:
                Ident:
                  name: x
                  ty:
                    SArray:
                      - Int32
                      - 3
            idx:
              kind:
                Lit:
                  value:
                    Int32: 0
                  ty: Int32
            ty: Int32

