crates/tych/src/tests/snapshots/array_index_2.snap
---
source: crates/tych/src/tests.rs
assertion_line: 653
expression: "(test[1], res)"
---
- "\nlet x: [int; 3] = [1, 2, 3]\nx[1 + 2]\n"
- Ok:
    nodes:
      - kind:
          Let:
            name: x
            antn:
              Array:
                - Int32
                - 3
            init:
              kind:
                Lit:
                  value:
                    Array:
                      elements:
                        - kind:
                            Lit:
                              value:
                                Int32: 1
                              ty: Int32
                        - kind:
                            Lit:
                              value:
                                Int32: 2
                              ty: Int32
                        - kind:
                            Lit:
                              value:
                                Int32: 3
                              ty: Int32
                      inner_ty: Int32
                  ty:
                    Array:
                      - Int32
                      - 3
      - kind:
          Index:
            binding:
              kind:
                Ident:
                  name: x
                  ty:
                    Array:
                      - Int32
                      - 3
            idx:
              kind:
                BinOp:
                  op: Add
                  lhs:
                    kind:
                      Lit:
                        value:
                          Int32: 1
                        ty: Int32
                  rhs:
                    kind:
                      Lit:
                        value:
                          Int32: 2
                        ty: Int32
                  ty: Int32
            ty: Int32

