crates/tych/src/tests/snapshots/array_index_3.snap
---
source: crates/tych/src/tests.rs
assertion_line: 674
expression: "(test[1], res)"
---
- "\nlet x: [int; 3] = [1, 2, 3]\nlet y: int = 1\nx[y]\n"
- Ok:
    nodes:
      - kind:
          Let:
            name: x
            antn:
              SArray:
                - Int32
                - 3
            init:
              kind:
                Lit:
                  value:
                    Array:
                      elements:
                        - kind:
                            Lit:
                              value:
                                Int32: 1
                              ty: Int32
                        - kind:
                            Lit:
                              value:
                                Int32: 2
                              ty: Int32
                        - kind:
                            Lit:
                              value:
                                Int32: 3
                              ty: Int32
                      inner_ty: Int32
                  ty:
                    SArray:
                      - Int32
                      - 3
      - kind:
          Let:
            name: y
            antn: Int32
            init:
              kind:
                Lit:
                  value:
                    Int32: 1
                  ty: Int32
      - kind:
          Index:
            array:
              kind:
                Ident:
                  name: x
                  ty:
                    SArray:
                      - Int32
                      - 3
            idx:
              kind:
                Ident:
                  name: y
                  ty: Int32
            ty: Int32

