crates/tych/src/tests/snapshots/array_index_bad_2.snap
---
source: crates/tych/src/tests.rs
assertion_line: 723
expression: "(test[1], res)"
---
- "\nlet x: [int; 3] = [1, 2, 3]\nx['c']\n"
- Err: "Array index must be an `int`, found `char`"

