crates/tych/src/tests/snapshots/array_index_bad_3.snap
---
source: crates/tych/src/tests.rs
assertion_line: 693
expression: "(test[1], res)"
---
- "\nlet x: [int; 3] = [1, 2, 3]\nlet y: int8 = 1\nx[y]\n"
- Err: Index must be an int32 (for now)

