crates/tych/src/tests/snapshots/array_lit_bad_1.snap
---
source: crates/tych/src/tests.rs
assertion_line: 723
expression: "(test[1], res)"
---
- "let x: [int; 3] = [1, 2.0, 3]"
- Err: Literal is a float in an integer context

