crates/tych/src/tests/snapshots/array_lit_bad_2.snap
---
source: crates/tych/src/tests.rs
assertion_line: 723
expression: "(test[1], res)"
---
- "let x: [float; 3] = [1, 2, 3]"
- Err: Literal is an integer in a float context

