crates/tych/src/tests/snapshots/array_lit_bad_3.snap
---
source: crates/tych/src/tests.rs
assertion_line: 651
expression: "(test[1], res)"
---
- "let x: [int; 2] = [1, 2, 3]"
- Err: "SArray literal too big in assignment: `3` > `2`"

